--- a/build.gradle
+++ b/build.gradle
@@ -42,9 +42,8 @@ jar {
 }
 
 dependencies {
-    compile 'log4j:log4j:1.2.17'
-    compile 'commons-io:commons-io:2.6'
-    compile 'org.apache.commons:commons-lang3:3.9'
+    compile 'org.slf4j:slf4j-simple:1.7.26'
+
     compile name: 'Catalano.Core'
     compile name: 'Catalano.Math'
     compile name: 'Catalano.IO'
