OpenCV: prepere to support

--- a/build.gradle
+++ b/build.gradle
@@ -44,6 +44,7 @@ jar {
 
 dependencies {
     compile 'org.slf4j:slf4j-simple:1.7.26'
+    compile 'org.openpnp:opencv:3.4.2-1'
 
     compile name: 'Catalano.Core'
     compile name: 'Catalano.Math'
