LeadToAxis: new algorithm

--- a/build.gradle
+++ b/build.gradle
@@ -63,6 +63,7 @@ dependencies {
     compile 'org.slf4j:slf4j-simple:1.7.26'
     compile 'org.openpnp:opencv:3.4.2-1'
     compile 'com.fasterxml.jackson.core:jackson-databind:2.9.9.3'
+    compile 'org.apache.commons:commons-math3:3.6.1'
 
     if (project.file('./libs/Catalano.Core.jar' ).exists())
         compile name:       'Catalano.Core'
@@ -73,7 +74,6 @@ dependencies {
     if (project.file('./libs/Catalano.Image.jar').exists())
         compile name:       'Catalano.Image'
 
-    testCompile 'org.slf4j:slf4j-simple:1.7.26'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.5.1'
     testRuntimeOnly    'org.junit.jupiter:junit-jupiter-engine:5.5.1'
 }
