--- a/build.gradle
+++ b/build.gradle
@@ -60,19 +60,20 @@ jar {
 }
 
 dependencies {
-    compile 'org.slf4j:slf4j-simple:1.7.26'
-    compile 'org.openpnp:opencv:3.4.2-1'
-    compile 'com.fasterxml.jackson.core:jackson-databind:2.9.9.3'
-    compile 'org.apache.commons:commons-math3:3.6.1'
+    implementation 'org.slf4j:slf4j-simple:1.7.26'
+  //implementation 'org.openpnp:opencv:3.4.2-1'
+    implementation 'org.bytedeco:opencv-platform:4.1.2-1.5.2'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.9.9.3'
+    implementation 'org.apache.commons:commons-math3:3.6.1'
 
   //if (project.file('./libs/Catalano.Core.jar' ).exists())
-        compile name:       'Catalano.Core'
+        implementation name:       'Catalano.Core'
   //if (project.file('./libs/Catalano.Math.jar' ).exists())
-        compile name:       'Catalano.Math'
+        implementation name:       'Catalano.Math'
   //if (project.file('./libs/Catalano.IO.jar'   ).exists())
-        compile name:       'Catalano.IO'
+        implementation name:       'Catalano.IO'
   //if (project.file('./libs/Catalano.Image.jar').exists())
-        compile name:       'Catalano.Image'
+        implementation name:       'Catalano.Image'
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.5.1'
     testRuntimeOnly    'org.junit.jupiter:junit-jupiter-engine:5.5.1'
