--- a/build.gradle
+++ b/build.gradle
@@ -61,8 +61,10 @@ jar {
 
 dependencies {
     implementation 'org.slf4j:slf4j-simple:1.7.26'
-  //implementation 'org.openpnp:opencv:3.4.2-1'
-    implementation 'org.bytedeco:opencv-platform:4.1.2-1.5.2'
+    if (false)
+        implementation 'org.openpnp:opencv:4.3.0-2'
+    else
+        implementation 'org.bytedeco:opencv-platform:4.3.0-1.5.3'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.9.9.3'
     implementation 'org.apache.commons:commons-math3:3.6.1'
 
