--- a/build.gradle
+++ b/build.gradle
@@ -119,11 +119,11 @@ task fatJar(type: Jar) {
 
 def ansiColorized(
     text,          // string: you text
-    colorText,     // string: any of [null, 'black', 'red', 'green', 'yellow', 'blue', 'purple', 'cyan', 'white']
-    colorBk,       // string: any of [null, 'black', 'red', 'green', 'yellow', 'blue', 'purple', 'cyan', 'white']
+    colorText,     // string: any of [null - no change color, 'black', 'red', 'green', 'yellow', 'blue', 'purple', 'cyan', 'white']
+    colorBk,       // string: any of [null - no change color, 'black', 'red', 'green', 'yellow', 'blue', 'purple', 'cyan', 'white']
     isBrightText,  // boolean: is high intensity? (set bright foreground color)
     isBrightBk,    // boolean: is high intensity? (set bright background color)
-    style          // string: any of [ null         //  none
+    styles         // string: any of [ null         //  none
                    //               , 'bold'        //  Bold or increased intensity     As with faint, the color change is a PC (SCO / CGA) invention
                    //               , 'dim'         //  Faint or decreased intensity    aka Dim (with a saturated color). May be implemented as a light font weight like bold.
                    //               , 'italic'      //  Italic                          Not widely supported. Sometimes treated as inverse or blink. 
@@ -132,7 +132,7 @@ def ansiColorized(
                    //               , 'rapidBLink'  //  Rapid Blink                     MS-DOS ANSI.SYS, 150+ per minute; not widely supported  
                    //               , 'inverse'     //  Reverse                         Swap foreground and background colors, aka invert; inconsistent emulation
                    //               , 'hidden'      //  Conceal                         aka Hide, not widely supported
-                   //               , 'crossout' ]  //  Crossed-out                     aka Strikethrough, characters legible but marked as if for deletion. 
+                   //               , 'crossout' ]  //  Crossed-out                     aka Strikethrough, characters legible but marked as if for deletion.
 ) {
     // https://en.wikipedia.org/wiki/ANSI_escape_code
     // https://stackoverflow.com/questions/5762491/how-to-print-color-in-console-using-system-out-println
@@ -165,22 +165,28 @@ def ansiColorized(
     case  null   :
     default      : codeBk = '' // unknown color
     }
-    
+
     if ((codeText != '') && (codeBk != ''))
         codeBk = ';' + codeBk;
 
     def addon = ''
-    switch (style) {
-    case 'bold'      : addon = ';1'; break
-    case 'dim'       : addon = ';2'; break
-    case 'italic'    : addon = ';3'; break
-    case 'underline' : addon = ';4'; break
-    case 'slowBlink' : addon = ';5'; break
-    case 'rapidBLink': addon = ';6'; break
-    case 'inverse'   : addon = ';7'; break
-    case 'hidden'    : addon = ';8'; break
-    case 'crossout'  : addon = ';9'; break
-    case  null       : addon = ''
+    if (styles != null) {
+        if (styles instanceof String)
+            styles = [ styles ]
+
+        for (def style : styles)
+            switch (style) {
+            case 'bold'      : addon += ';1'; break
+            case 'dim'       : addon += ';2'; break
+            case 'italic'    : addon += ';3'; break
+            case 'underline' : addon += ';4'; break
+            case 'slowBlink' : addon += ';5'; break
+            case 'rapidBLink': addon += ';6'; break
+            case 'inverse'   : addon += ';7'; break
+            case 'hidden'    : addon += ';8'; break
+            case 'crossout'  : addon += ';9'; break
+            case  null       : break // none
+            }
     }
 
     def reset = '\u001B[0m'
@@ -194,17 +200,24 @@ def ansiColorized(
 //    for (def isBrightBk   : [false, true]) {
 //        for (def style : [ null, 'bold', 'dim', 'italic', 'underline', 'slowBlink', 'rapidBLink', 'inverse', 'hidden', 'crossout' ]) {
 //            def thisText = 'ansiColorized(thisText, colorText=' + clrTxt + ', colorBk=' + clrBk + ', isBrightText=' + isBrightText + ', isBrightBk=' + isBrightBk + ', style=' + style + ')'
-//            println thisText + '\t\t' + ansiColorized(thisText, clrTxt, clrBk, isBrightText, isBrightBk, style)
+//            println thisText + '\t\t' + ansiColorized(thisText, clrTxt, clrBk, isBrightText, isBrightBk, style, true)
 //        }
 //    }}
 //}}
 
-def colorizedText(colorName, text) { return ansiColorized(colorName, text, false, false, false, null) } 
-
 def downloadByUrl(url, targetFile, recheckSize) {
     try {
+        url = new java.net.URL(url)
+    } catch (Exception ex) {
+        println ansiColorized('Bad url: ' + ex,
+                             'red', null, false, null, null)
+        return false
+    }
+
+    try {
         if (targetFile.exists()) {
-            println 'File already downloaded! ' + targetFile.absolutePath
+            println ansiColorized('File already downloaded! ', null, null, null, null, 'dim') +
+                    ansiColorized(targetFile.absolutePath    , null, null, null, null, ['dim', 'italic'])
 
             if (!recheckSize)
                 return true
@@ -224,9 +237,12 @@ def downloadByUrl(url, targetFile, recheckSize) {
                     return true // all ok
                 }
 
-                println colorizedText('red', '...illegal file size: delete it: locatFileSize=' + targetFile.length() + '; remouteFileSize=' + size)
-
+                println ansiColorized('...illegal file size: delete it: locatFileSize=' + targetFile.length() + '; remouteFileSize=' + size,
+                                      'red', null, false, null, null)
                 targetFile.delete()
+            } catch (Exception ex) {
+                println ansiColorized('Can`t recheck file size: ' + ex,
+                                     'red', null, false, null, null)
             } finally {
                 if (conn != null)
                     conn.disconnect()
@@ -235,7 +251,8 @@ def downloadByUrl(url, targetFile, recheckSize) {
 
         targetFile.parentFile.mkdirs()
 
-        println colorizedText('yellow', 'Trying to download a file ' + url)
+        println ansiColorized('Trying to download a file ', 'yellow', null,  true, null, null) +
+                ansiColorized(url                         , 'yellow', null, false, null, ['dim', 'italic'])
         new java.io.BufferedInputStream(url.openStream()).withCloseable { bin ->
         new java.io.FileOutputStream(targetFile).withCloseable { fos ->
             def buffer = new byte[10240]
@@ -249,13 +266,16 @@ def downloadByUrl(url, targetFile, recheckSize) {
                 fos.write(buffer, 0, read)
                 total += read
                 if ((i % 10) == 9)
-                    println '  ...iteration #' + (1+i) + ': read=' + read + '; total=' + total
+                    println ansiColorized('  ...iteration #' + (1+i) + ': read=' + read + '; total=' + total,
+                                          null, null, null, null, 'dim')
             }
-            println 'File downloaded! ' + targetFile.absolutePath
+            println ansiColorized('File downloaded! '    , 'cyan', null,  true, null, null) +
+                    ansiColorized(targetFile.absolutePath, 'cyan', null, false, null, ['dim', 'italic'])
         }}
         return true
     } catch (Exception ex) {
-        println colorizedText('red', 'Can`t download file: ' + ex)
+        println ansiColorized('Can`t download file: ' + ex,
+                             'red', null, false, null, null)
         return false
     }
 }
@@ -278,7 +298,7 @@ task downloadCatalanoFramework(type: Copy) {
 
     def targetZipFile = project.file('./libs/libs.zip')
     def succ = downloadByUrl(
-        new java.net.URL('https://github.com/DiegoCatalano/Catalano-Framework/releases/download/v1.6.1.1-libs/libs.zip'),
+        'https://github.com/DiegoCatalano/Catalano-Framework/releases/download/v1.6.1.1-libs/libs.zip',
         targetZipFile,
         true)
     if (!succ)
@@ -311,50 +331,50 @@ task downloadExampleImage() {
     doLast {
         // https://commons.wikimedia.org/wiki/File:%D0%92%D0%BE%D0%BB%D0%BE%D0%B4%D0%B8%D0%BC%D0%B8%D1%80%D1%81%D1%8C%D0%BA%D0%B0_%D0%B3%D1%96%D1%80%D0%BA%D0%B0,_%D0%92%D0%BE%D0%BB%D0%BE%D0%B4%D0%B8%D0%BC%D0%B8%D1%80_%D1%82%D0%B0_%D0%94%D0%BD%D1%96%D0%BF%D1%80%D0%BE.JPG
         downloadByUrl(
-            new java.net.URL('https://upload.wikimedia.org/wikipedia/commons/thumb/1/1c/%D0%92%D0%BE%D0%BB%D0%BE%D0%B4%D0%B8%D0%BC%D0%B8%D1%80%D1%81%D1%8C%D0%BA%D0%B0_%D0%B3%D1%96%D1%80%D0%BA%D0%B0%2C_%D0%92%D0%BE%D0%BB%D0%BE%D0%B4%D0%B8%D0%BC%D0%B8%D1%80_%D1%82%D0%B0_%D0%94%D0%BD%D1%96%D0%BF%D1%80%D0%BE.JPG/1024px-%D0%92%D0%BE%D0%BB%D0%BE%D0%B4%D0%B8%D0%BC%D0%B8%D1%80%D1%81%D1%8C%D0%BA%D0%B0_%D0%B3%D1%96%D1%80%D0%BA%D0%B0%2C_%D0%92%D0%BE%D0%BB%D0%BE%D0%B4%D0%B8%D0%BC%D0%B8%D1%80_%D1%82%D0%B0_%D0%94%D0%BD%D1%96%D0%BF%D1%80%D0%BE.JPG'),
+            'https://upload.wikimedia.org/wikipedia/commons/thumb/1/1c/%D0%92%D0%BE%D0%BB%D0%BE%D0%B4%D0%B8%D0%BC%D0%B8%D1%80%D1%81%D1%8C%D0%BA%D0%B0_%D0%B3%D1%96%D1%80%D0%BA%D0%B0%2C_%D0%92%D0%BE%D0%BB%D0%BE%D0%B4%D0%B8%D0%BC%D0%B8%D1%80_%D1%82%D0%B0_%D0%94%D0%BD%D1%96%D0%BF%D1%80%D0%BE.JPG/1024px-%D0%92%D0%BE%D0%BB%D0%BE%D0%B4%D0%B8%D0%BC%D0%B8%D1%80%D1%81%D1%8C%D0%BA%D0%B0_%D0%B3%D1%96%D1%80%D0%BA%D0%B0%2C_%D0%92%D0%BE%D0%BB%D0%BE%D0%B4%D0%B8%D0%BC%D0%B8%D1%80_%D1%82%D0%B0_%D0%94%D0%BD%D1%96%D0%BF%D1%80%D0%BE.JPG',
             project.file('./exampleImages/VolodHill.jpg'),
             false)
 
         // https://commons.wikimedia.org/wiki/File:Alphabet_board.jpg
         downloadByUrl(
-            new java.net.URL('https://upload.wikimedia.org/wikipedia/commons/7/70/Alphabet_board.jpg'),
+            'https://upload.wikimedia.org/wikipedia/commons/7/70/Alphabet_board.jpg',
             project.file('./exampleImages/Alphabet.eng.jpg'),
             false)
 
         // https://en.m.wikipedia.org/wiki/File:Similar-geometric-shapes.svg
         downloadByUrl(
-            new java.net.URL('https://upload.wikimedia.org/wikipedia/commons/thumb/5/5d/Similar-geometric-shapes.svg/1024px-Similar-geometric-shapes.svg.png'),
+            'https://upload.wikimedia.org/wikipedia/commons/thumb/5/5d/Similar-geometric-shapes.svg/1024px-Similar-geometric-shapes.svg.png',
             project.file('./exampleImages/Shapes.png'),
             false)
 
         // https://en.wikipedia.org/wiki/File:Lenna_(test_image).png
         downloadByUrl(
-            new java.net.URL('https://upload.wikimedia.org/wikipedia/en/7/7d/Lenna_%28test_image%29.png'),
+            'https://upload.wikimedia.org/wikipedia/en/7/7d/Lenna_%28test_image%29.png',
             project.file('./exampleImages/Lena.png'),
             false)
 
         // https://en.wikipedia.org/wiki/Ukrainian_identity_card
         // https://commons.wikimedia.org/wiki/File:Passport_of_the_Citizen_of_Ukraine_(Since_2016).jpg
         downloadByUrl(
-            new java.net.URL('https://upload.wikimedia.org/wikipedia/commons/0/0f/Passport_of_the_Citizen_of_Ukraine_%28Since_2016%29.jpg'),
+            'https://upload.wikimedia.org/wikipedia/commons/0/0f/Passport_of_the_Citizen_of_Ukraine_%28Since_2016%29.jpg',
             project.file('./exampleImages/passportUkr.jpg'),
             false)
 
         // free stock photos
-        // https://www.pexels.com/search/family/
-        System.setProperty("http.agent", "Mozilla..."); // lifehack. Otherwise: java.io.IOException: Server returned HTTP response code: 503
+        // https://www.pexels.com
+        System.setProperty('http.agent', 'Mozilla...'); // lifehack. Otherwise: java.io.IOException: Server returned HTTP response code: 503
 
         // Саша Лазарев: Children Taking Groupie
         // https://www.pexels.com/photo/children-taking-groupie-3556662/
         downloadByUrl(
-            new java.net.URL('https://images.pexels.com/photos/3556662/pexels-photo-3556662.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260'),
+            'https://images.pexels.com/photos/3556662/pexels-photo-3556662.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260',
             project.file('./exampleImages/family_childrenTakingGroupie_750x1260_AlexLazarev.jpg'),
             false)
 
         // Julia M Cameron: Photo of Woman and Boy Smiling While Watching Through Imac
         // https://www.pexels.com/photo/photo-of-woman-and-boy-leaning-on-wooden-table-4145353/
         downloadByUrl(
-            new java.net.URL('https://images.pexels.com/photos/4145353/pexels-photo-4145353.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260'),
+            'https://images.pexels.com/photos/4145353/pexels-photo-4145353.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260',
             project.file('./exampleImages/family_womanAndBoySmiling_750x1260_JuliaCameron.jpg'),
             false)
 
